=== ongoing ===


=== 0.6 ===

- added is_published to EventTitle to be able to publish several languages on
  their own

=== 0.5 ===

- Renamed placeholder form content to conference. This allows to reduce
  possible plugins via the cms setting.

=== 0.4 ===

- removed maps embed code field

=== 0.3.1 ===

- added help text to lat / lng fields

=== 0.3 ===

- Added EventManager with `get_visible` method. Shows published, upcoming and
  still running events.
- Refactored factories, so that tests are easier to write and read.

=== 0.2 ===

- Added lat lng fields to event.

=== 0.1.2 ===

- Fixed more wrong names :(

=== 0.1.1 ===

- Fixed wrong path to urls.py in cms_app.py
- Fixed wrong import in views.py
- Renamed view names.

=== 0.1 ===

Initial commit