@@ -1,5 +1,7 @@
 === ongoing ===
 
+- changed the way we filter for published items. We MUST have the LANGUAGE_CODE
+  in the request.
 
 === 0.6 ===
 
